# unison

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.claude/skills/git-worktree/: SKILL.md
.github/workflows/: ci.yml
benches/: RESULTS.md
clients/ruby/: README.md
clients/ruby/bench/: bench.rb  index.kdl
clients/ruby/bench/runs/: 2026-05-19-rc.2.kdl
clients/typescript/: .gitignore  README.md  package.json
clients/typescript/src/: index.ts
clients/typescript/src/channel/: async_queue.ts  datagram_channel.ts  default_codec.ts  dispatcher.ts  frame.ts  types.ts  unison_channel.ts  varint.ts
clients/typescript/src/error/: category.ts
clients/typescript/src/transport/: errors.ts  web_transport.ts
clients/typescript/tests/channel/: async_queue.test.ts  dispatcher.test.ts  frame.test.ts  varint.test.ts
clients/typescript/tests/error/: category.test.ts
clients/typescript/tests/transport/: errors.test.ts
crates/unison-agent/: Cargo.toml
crates/unison-agent/examples/: interactive_chat.rs  simple_query.rs  unison_mcp_demo.rs
crates/unison-agent/src/: agent.rs  tools.rs
crates/unison-cli/: Cargo.toml
crates/unison-cli/src/: call.rs  main.rs  mock.rs  ping.rs  schema_lint.rs  sniff.rs
crates/unison-mcp-probe/: Cargo.toml  README.md
crates/unison-mcp-probe/src/: main.rs  tools.rs
crates/unison-network/: Cargo.toml
crates/unison-protocol/: Cargo.toml  build.rs
crates/unison-protocol/benches/: datagram.rs  datagram_channel.rs  datagram_channel_max_throughput.rs  datagram_channel_sustained.rs  ping_pong.rs  quic_performance.rs  throughput.rs
crates/unison-protocol/examples/: benchmark.rs  builder_api.rs  unison_ping_client.rs  unison_ping_server.rs  webtransport_echo_server.rs
crates/unison-protocol/proto/: creo_sync.proto  protocol.proto
crates/unison-protocol/src/: lib.rs  prelude.rs
crates/unison-protocol/src/codec/: mod.rs
crates/unison-protocol/src/codegen/: rust.rs  typescript.rs
crates/unison-protocol/src/context/: adapter.rs
crates/unison-protocol/src/network/: cert.rs  channel.rs  client.rs  conn.rs  conn_quinn.rs  context.rs  datagram_channel.rs  datagram_dispatcher.rs  dispatch.rs  frame.rs  identity.rs  mod.rs  quic.rs  server.rs  stream.rs  webtransport.rs
crates/unison-protocol/src/packet/: header.rs  mod.rs  payload.rs  serialization.rs
crates/unison-protocol/src/parser/: mod.rs  schema.rs
crates/unison-protocol/tests/: cgp_integration_test.rs  quic_integration_test.rs  simple_quic_test.rs  test_channel_stream.rs  test_codegen_channel.rs  test_codegen_snapshot.rs  test_codegen_typescript_channel.rs  test_creo_sync.rs  test_e2e_channel.rs  test_identity.rs  test_identity_quic.rs  test_integ_codegen_pipeline.rs  test_integ_error_paths.rs  test_integ_handler_dispatch.rs  test_integ_identity_flow.rs  test_integ_protocol_message.rs  test_integ_server_handlers.rs  test_kdl.rs  test_medium_client_events.rs  test_medium_datagram_echo.rs  test_medium_quic_lifecycle.rs  test_proto_buffa.rs
crates/unison-protocol/tests/common/: mod.rs
crates/unison-protocol/tests/fixtures/codegen/: creo_sync.rs.txt  creo_sync.ts.txt  hierophant.rs.txt  hierophant.ts.txt  ping_pong.rs.txt  ping_pong.ts.txt
design/: README.md  architecture.md  datagram-channel.md  packet.md  quic-runtime.md  test-strategy.md  typescript-client-api.md  wire-format.md
docs/plans/: 2026-02-16-documentation-rewrite-design.md  2026-02-16-documentation-rewrite.md
guides/: README.md  channel-guide.md  integration-guide.md  migration.md  quickstart.md  typescript-sdk.md
schemas/: creo_sync.kdl  hierophant.kdl  ping_pong.kdl
spec/: README.md
spec/01-core-concept/: SPEC.md
spec/02-protocol-rpc/: SPEC.md
spec/02-unified-channel/: SPEC.md
spec/03-stream-channels/: SPEC.md
