[workspace]
members = [
    "crates/unison-protocol",
    "crates/unison-agent",
    "crates/unison-mcp-probe",
    "crates/unison-cli",
]
resolver = "2"

[workspace.package]
version = "1.0.0-rc.2"
edition = "2024"
authors = ["Mako<mito@chronista.club>"]
license = "MIT"
homepage = "https://github.com/chronista-club/club-unison"
repository = "https://github.com/chronista-club/club-unison"
rust-version = "1.95"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
convert_case = "0.11"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# QUIC support
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
rcgen = "0.14"
webpki-roots = "1.0"
futures-util = "0.3"
# 自己署名 cert の validity 期間設定用 (rcgen の date 型に合わせる)
time = "0.3"

# WebTransport (= QUIC + HTTP/3) — ブラウザ ingress 用 (Phase 6a)
wtransport = "0.7"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
miette = { version = "7.6", features = ["fancy"] }

# Context-Generic Programming
cgp = "0.7.0"
cgp-component = "0.7.0"

# Protocol Buffers
buffa = "0.5"
buffa-build = "0.5"

# Packet module dependencies
bytes = "1.11"
zstd = "0.13"
crc32fast = "1.5"

# CLI
clap = { version = "4.6", features = ["derive", "cargo", "color"] }

# MCP (Model Context Protocol) — rmcp 公式 Rust SDK
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
schemars = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
indexmap = "2.14"
scc = "3"
tempfile = "3.27"
kdl = "6.5.0"
club-kdl = "0.8"

# Dev dependencies
pretty_assertions = "1.4"
tokio-test = "0.4"
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
hdrhistogram = "7.5"

[profile.dev]
split-debuginfo = "unpacked"
codegen-units = 256

[profile.test]
split-debuginfo = "unpacked"
codegen-units = 256
