[package]
name = "unison-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reference Claude Agent that talks Unison Protocol channels — internal dev/integration target."
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Claude Agent SDK
claude-agent-sdk = "0.1.1"
futures = "0.3"

# club-unison: crates.io package、lib identifier は `unison`
club-unison = { path = "../unison-protocol" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
