[package]
name = "unison-mcp-probe"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "MCP probe for inspecting Unison Protocol servers — a dev-experience tool to poke Unison channels from Claude Code."
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "unison-mcp-probe"
path = "src/main.rs"

[dependencies]
# MCP
rmcp.workspace = true
schemars.workspace = true

# Unison client
unison = { path = "../unison-protocol" }

# Runtime
tokio.workspace = true
async-stream.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
