[package]
name = "club-unison"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Type-safe communication protocol framework powered by KDL schema and QUIC transport — sailing in unison."
keywords = ["protocol", "kdl", "quic", "streaming", "realtime"]
categories = ["network-programming", "web-programming", "api-bindings"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
exclude = [
    ".github/*",
    "docs/*",
    "benches/*",
    "tests/*"
]
rust-version.workspace = true

# lib name は bare name `unison` (chronista-club 命名規則、2026-05-16):
# crates.io package = `club-unison` (= namespace 衝突回避)、lib identifier
# = `unison` (= code path namespace、prefix 不要)。v0.6.0 の full rename
# policy の lib-name 条項を撤回。詳細: chronista-club CONVENTIONS.md
[lib]
name = "unison"
path = "src/lib.rs"

[dependencies]
miette.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Code generation
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
convert_case.workspace = true

# Async runtime
tokio.workspace = true

# QUIC support
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
webpki-roots.workspace = true
futures-util.workspace = true

# WebTransport (= QUIC + HTTP/3) — ブラウザ ingress 用 (Phase 6a)
wtransport.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Context-Generic Programming
cgp.workspace = true
cgp-component.workspace = true

# Protocol Buffers
buffa.workspace = true

# Packet module dependencies
bytes.workspace = true
zstd.workspace = true
crc32fast.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-stream.workspace = true
indexmap.workspace = true
scc.workspace = true
tempfile.workspace = true
kdl.workspace = true
club-kdl.workspace = true

[build-dependencies]
buffa-build.workspace = true
kdl.workspace = true
miette.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
convert_case.workspace = true
anyhow.workspace = true
rcgen.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio-test.workspace = true
criterion.workspace = true
hdrhistogram.workspace = true

[[bench]]
name = "quic_performance"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "ping_pong"
harness = false

[[bench]]
name = "datagram"
harness = false

[[bench]]
name = "datagram_channel"
harness = false

[[bench]]
name = "datagram_channel_sustained"
harness = false

[[bench]]
name = "datagram_channel_max_throughput"
harness = false

# docs.rs build 設定: feature flag 追加時に全 feature を doc 化、
# `#[cfg(docsrs)]` で docs.rs 限定の attribute (例: `#[doc(cfg(...))]`) を有効化。
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
